[gd_scene load_steps=20 format=1]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://assets/player/character.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 8.81596
height = 1.15419

[sub_resource type="Animation" id=2]

length = 0.5
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": FloatArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 7, 134, 16, 21 ), Rect2( 40, 135, 16, 22 ), Rect2( 72, 135, 16, 24 ), Rect2( 104, 135, 16, 24 ), Rect2( 7, 134, 16, 21 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.5 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "free_atk"
} ]
}

[sub_resource type="Animation" id=3]

length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 9, 231, 13, 21 ), Rect2( 33, 230, 21, 22 ), Rect2( 68, 230, 18, 22 ), Rect2( 101, 230, 18, 22 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.4 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "free_atk"
} ]
}

[sub_resource type="Animation" id=4]

length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 9, 199, 16, 21 ), Rect2( 41, 199, 20, 21 ), Rect2( 73, 198, 15, 22 ), Rect2( 105, 198, 15, 22 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.4 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "free_atk"
} ]
}

[sub_resource type="Animation" id=5]

length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 8, 166, 17, 21 ), Rect2( 40, 167, 17, 20 ), Rect2( 72, 166, 15, 22 ), Rect2( 104, 166, 15, 22 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.382832 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "free_atk"
} ]
}

[sub_resource type="Animation" id=6]

resource/name = "death_left"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.4 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 114, 102, 13, 22 ), Rect2( 97, 102, 13, 22 ), Rect2( 81, 104, 15, 20 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.4 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 28.8509 ]
}

[sub_resource type="Animation" id=7]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.4 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 114, 38, 13, 22 ), Rect2( 98, 38, 13, 22 ), Rect2( 80, 40, 16, 20 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -40.1 ]
}

[sub_resource type="Animation" id=8]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Rect2( 33, 6, 15, 22 ) ]
}

[sub_resource type="Animation" id=9]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Rect2( 1, 102, 13, 22 ) ]
}

[sub_resource type="Animation" id=10]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Rect2( 2, 38, 13, 22 ) ]
}

[sub_resource type="Animation" id=11]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Rect2( 0, 69, 15, 23 ) ]
}

[sub_resource type="Animation" id=12]

length = 0.3
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 17, 7, 15, 21 ), Rect2( 33, 6, 15, 22 ), Rect2( 49, 6, 15, 22 ) ]
}

[sub_resource type="Animation" id=13]

length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 1, 102, 13, 22 ), Rect2( 17, 103, 13, 21 ), Rect2( 33, 102, 13, 22 ), Rect2( 49, 103, 13, 21 ) ]
}

[sub_resource type="Animation" id=14]

length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 2, 38, 13, 22 ), Rect2( 18, 39, 13, 21 ), Rect2( 34, 38, 13, 22 ), Rect2( 50, 39, 13, 21 ) ]
}

[sub_resource type="Animation" id=15]

length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 69, 15, 23 ), Rect2( 16, 70, 15, 22 ), Rect2( 32, 69, 15, 23 ), Rect2( 48, 70, 15, 22 ) ]
}

[sub_resource type="GDScript" id=16]

script/source = "extends Camera2D


onready var metrics = Vector2(Globals.get(\"display/width\"), Globals.get(\"display/height\"))


func _process(delta):
	set_limit( MARGIN_RIGHT, metrics.width )
	set_limit( MARGIN_BOTTOM, metrics.height )


func _ready():
	set_process(true)
	pass
"

[sub_resource type="RayShape2D" id=17]

custom_solver_bias = 0.0
length = 8.44014

[node name="Player_node" type="Node2D"]

[node name="player_body" type="KinematicBody2D" parent="."]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -0.17482, -2.44754 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="collisionshape" type="CollisionShape2D" parent="player_body"]

transform/pos = Vector2( -0.17482, -2.44754 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="player_body"]

texture = ExtResource( 2 )
region = true
region_rect = Rect2( 33, 6, 15, 22 )

[node name="anim_mov" type="AnimationPlayer" parent="player_body"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/atk_down = SubResource( 2 )
anims/atk_left = SubResource( 3 )
anims/atk_right = SubResource( 4 )
anims/atk_up = SubResource( 5 )
anims/death_left = SubResource( 6 )
anims/death_right = SubResource( 7 )
anims/idle_down = SubResource( 8 )
anims/idle_left = SubResource( 9 )
anims/idle_right = SubResource( 10 )
anims/idle_up = SubResource( 11 )
anims/walk_down = SubResource( 12 )
anims/walk_left = SubResource( 13 )
anims/walk_right = SubResource( 14 )
anims/walk_up = SubResource( 15 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="camera" type="Camera2D" parent="player_body"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 0.4, 0.4 )
limit/left = 0
limit/top = 0
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = true
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2
script/script = SubResource( 16 )

[node name="area" type="Area2D" parent="player_body"]

editor/display_folded = true
transform/pos = Vector2( -0.0944691, -0.0944672 )
input/pickable = true
shapes/0/shape = SubResource( 17 )
shapes/0/transform = Matrix32( 0.0151313, -0.999885, 1.18694, 0.0179621, -0.586532, -2.69921 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 17 )
shapes/1/transform = Matrix32( -0.999861, -0.0166844, 0.0215424, -1.29099, -1.64838, -4.41244 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 17 )
shapes/2/transform = Matrix32( 0.00291444, 0.999996, -0.991711, 0.00289029, -1.6284, -2.71585 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 17 )
shapes/3/transform = Matrix32( 0.999104, -0.0423116, 0.0423116, 0.999104, -1.67669, -2.71571 )
shapes/3/trigger = false
shapes/4/shape = SubResource( 17 )
shapes/4/transform = Matrix32( 0.999123, -0.0418757, 0.0471269, 1.12441, -1.76175, -1.86953 )
shapes/4/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="hit_box1" type="CollisionShape2D" parent="player_body/area"]

transform/pos = Vector2( -0.586532, -2.69921 )
transform/rot = 89.133
transform/scale = Vector2( 1, 1.18708 )
shape = SubResource( 17 )
trigger = false
_update_shape_index = 0

[node name="hit_box2" type="CollisionShape2D" parent="player_body/area"]

transform/pos = Vector2( -1.64838, -4.41244 )
transform/rot = 179.044
transform/scale = Vector2( 1, 1.29117 )
shape = SubResource( 17 )
trigger = false
_update_shape_index = 1

[node name="hit_box3" type="CollisionShape2D" parent="player_body/area"]

transform/pos = Vector2( -1.6284, -2.71585 )
transform/rot = 270.167
transform/scale = Vector2( 1, 0.991715 )
shape = SubResource( 17 )
trigger = false
_update_shape_index = 2

[node name="hit_box4" type="CollisionShape2D" parent="player_body/area"]

transform/pos = Vector2( -1.67669, -2.71571 )
transform/rot = 362.425
shape = SubResource( 17 )
trigger = false
_update_shape_index = 3

[node name="hit_box5" type="CollisionShape2D" parent="player_body/area"]

transform/pos = Vector2( -1.76175, -1.86953 )
transform/rot = 362.4
transform/scale = Vector2( 1, 1.1254 )
shape = SubResource( 17 )
trigger = false
_update_shape_index = 4

[connection signal="area_enter" from="player_body/area" to="player_body" method="_on_area_area_enter"]

[connection signal="area_exit" from="player_body/area" to="player_body" method="_on_area_area_exit"]


